--- a/blocks/amazon/src/styles.scss
+++ b/blocks/amazon/src/styles.scss
@@ -1,66 +1,36 @@
-@media screen and (min-width: 800px) {
-    /* Reglas CSS que se aplicarán solo a pantallas de 800px o más */
-.wp-block-amz-amazon{
+.wp-block-amz-amazon {
     display: flex;
     justify-content: space-between;
 }
-.container-AMZ{
+
+.container-AMZ {
     display: grid;
     width: 200px;
     height: 350px;
     top: 10%;
     left: 5%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
+    border-radius: 8px;
+    background-color: white;
     border-style: 1rem outset black;
     /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
+    border: 1px solid #B9B0B0;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-items: center;
- }
+}
 
- .container2-AMZ{
-    display: grid;
-    width: 200px;
-    height: 350px;
-    top: 10%;
-    left: 25%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
-    border-style: 1rem outset black;
-    /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-items: center;
- }
-
- .container3-AMZ{
-    display: grid;
-    width: 200px;
-    height: 350px;
-    top: 10%;
-    left: 45%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
-    border-style: 1rem outset black;
-    /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-items: center;
- }
-
-.product-AMZ{
+.product-AMZ {
     margin-top: 3.5vh;
-    object-fit: contain;
+    object-fit: cover;
     width: 150px;
     height: 140px !important;
     background-color: transparent;
     border-style: 1rem outset;
     border-radius: 1.5rem;
     box-shadow: 0px 4px 3px 0.2px #2f3640;
-    
+
 }
-.title-AMZ{
+
+.title-AMZ {
     align-self: center;
     font-size: 20px !important;
     font-weight: bold !important;
@@ -68,35 +38,34 @@
     width: 125px;
 
 }
-.text-AMZ{
+
+.text-AMZ {
     align-self: center;
     font-size: 16px !important;
 }
 
-.product-AMZ{
+.product-AMZ {
     align-content: center;
     justify-content: center;
 }
 
-.button-AMZ{
+.button-AMZ {
     align-self: center;
     width: 150px;
     height: 40px;
-    background-color: #ff9900;
-    color: #fff;
+    background: linear-gradient(180deg, #F6DD9E 0%, #F0C24F 100%);
     padding: 10px 20px;
-    border-radius: 0.4rem;
+    border-radius: 4px;
+    border: 1px solid #000000 !important;
     text-align: center;
-    text-decoration: none;
     font-weight: bold;
-    
     cursor: pointer;
     border: transparent;
     font-size: 10px;
 }
 
 .button-AMZ:hover {
-    background-color: #ffb700;
+    background-color: #ffb700 !important;
 }
 
 .button-AMZ:disabled {
@@ -105,128 +74,30 @@
     cursor: not-allowed;
 }
 
-.text-AMZ{
+.text-AMZ {
     text-justify: auto;
 }
 
-a{
+.AMZ-buttonlink {
     display: flex;
     margin: 0;
     padding: 0;
     align-content: center;
     justify-content: center;
     margin-bottom: 3vh;
-    text-decoration: none;
-}
-}
-
-@media screen and (max-width: 800px) {
-    /* Reglas CSS que se aplicarán solo a pantallas de 800px o más */
-
-
-
-.container-AMZ{
-    display: grid;
-    width: 45vh;
-    height: 80vh;
-    top: 10%;
-    left: 5%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
-    border-style: 1rem outset black;
-    /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-items: center;
- }
-
- .container2-AMZ{
-    display: grid;
-    width: 45vh;
-    height: 80vh;
-    top: 10%;
-    left: 25%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
-    border-style: 1rem outset black;
-    /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-items: center;
- }
-
- .container3-AMZ{
-    display: grid;
-    width: 45vh;
-    height: 80vh;
-    top: 10%;
-    left: 45%;
-    border-radius: 1rem;
-    background-color: #f5f6fa;
-    border-style: 1rem outset black;
-    /*box-shadow: 5px 5px 3px #f5f6fa;*/
-    border: 0.2rem solid #2f3640;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    justify-items: center;
- }
-
-.product-AMZ{
-    margin-top: 3.5vh;
-    object-fit: contain;
-    width: 30vh;
-    height: 30vh;
-    background-color: transparent;
-    border-style: 1rem outset;
-    border-radius: 1.5rem;
-    box-shadow: 0px 4px 3px 0.2px #2f3640;
+    text-decoration: none !important;
 }
 
-.text-AMZ{
-    align-self: center;
-}
 
-.product-AMZ{
-    align-content: center;
-    justify-content: center;
-}
-
-.button-AMZ{
-    align-self: center;
-    width: 35vh;
-    height: 7vh;
-    background-color: #ff9900;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 0.4rem;
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-    cursor: pointer;
-    border: transparent;
-    font-size: medium;
-}
-
-.button-AMZ:hover {
-    background-color: #ffb700;
-}
-
-.button-AMZ:disabled {
-    background-color: #ccc;
-    color: #999;
-    cursor: not-allowed;
-}
-
-.text-AMZ{
-    text-justify: auto;
-}
-
-a {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    align-content: center;
-    justify-content: center;
-    margin-bottom: 3vh;
-    text-decoration: none;
-}
+@media (max-width: 480px) {
+    // Estilos para telefono
+    .wp-block-amz-amazon {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .container-AMZ {
+        margin-bottom: 20px;
+    }
 }
