--- a/blocks/amazon/src/styles.scss
+++ b/blocks/amazon/src/styles.scss
@@ -6,7 +6,6 @@
 .container-AMZ {
     display: grid;
     width: 200px;
-    height: 350px;
     top: 10%;
     left: 5%;
     border-radius: 8px;
@@ -14,7 +13,7 @@
     border-style: 1rem outset black;
     /*box-shadow: 5px 5px 3px #f5f6fa;*/
     border: 1px solid #B9B0B0;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     justify-items: center;
 }
 
@@ -33,9 +32,10 @@
 .title-AMZ {
     align-self: center;
     font-size: 20px !important;
-    font-weight: bold !important;
     margin: 12px 0px 0px 0px;
     width: 125px;
+    font-weight: normal !important;
+	text-align: center !important
 
 }
 
@@ -62,6 +62,7 @@
     cursor: pointer;
     border: transparent;
     font-size: 10px;
+    margin-bottom:8px ; 
 }
 
 .button-AMZ:hover {
